fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -49,7 +49,7 @@ body {
 
   .chat-box {
     position: relative;
-    left: -60px;
+    left: -50px;
   }
 }
 
